# mftpclient

./: .gitignore  CHANGES.md  Makefile  README.md  ftp_client.py  pyproject.toml  setup.py
.github/workflows/: tests.yaml  ubuntu-testing.yaml
mftpclient/: __init__.py  _compat.py  client.py  mptcp_support.py
mftpclient/test/: __init__.py  test_client.py  test_server.py
mftpclient/tests/: __init__.py  test_client.py
pyftpclient/: _compat.py
pyftpclient/tests/: __init__.py  test_client.py
scripts/internal/: purge_installation.py
